# cockpit-cfdt-final

./: .gitignore  FIX_STOCKAGE.md  GENERER_ICONES.md  PORTABLE.md  README.md  build-clean.sh  clean-extreme.sh  generate-icons.py  generate-icons.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  crypto.rs  enpass.rs  lib.rs  main.rs  storage.rs
src/components/: AddSiteModal.css  AddSiteModal.tsx  Button.css  Button.tsx  ChecklistModal.css  ChecklistModal.tsx  EditSiteModal.css  EditSiteModal.tsx  ExtensionModal.css  ExtensionModal.tsx  Input.css  Input.tsx  InterventionModal.css  InterventionModal.tsx  JoomlaAccountModal.css  JoomlaAccountModal.tsx  PhpMyAdminModal.css  PhpMyAdminModal.tsx  Sidebar.css  Sidebar.tsx  SiteCard.css  SiteCard.tsx
src/pages/: MainLayout.css  MainLayout.tsx  Settings.css  Settings.tsx  SiteDetail.css  SiteDetail.tsx  SitesList.css  SitesList.tsx  UnlockScreen.css  UnlockScreen.tsx
src/styles/: globals.css
src/types/: index.ts
src/utils/: enpass.ts  importExport.ts  mockData.ts  tauri.ts
